<resources>
    <string name="app_name">Kanbun</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="text_app_intro">Visualize project tasks and track work progress\nwith intuitive Kanban boards</string>
    <string name="sign_up_greeting">Let\'s get you in</string>
    <string name="sign_in_greeting">Welcome back</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="or">or</string>
    <string name="sign_up_github">Sign up with GitHub</string>
    <string name="sign_in_github">Sign in with GitHub</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="suggest_sign_in">Already have an account?</string>
    <string name="suggest_sign_up">Don\'t have an account?</string>
    <string name="title_confirm_email">Confirm your email address</string>
    <string name="subtitle_confirm_email">We sent a confirmation email to:\n\n<b>%s</b>\n\nCheck your email and click on the\nconfirmation link to continue.</string>
    <string name="resend_email">Resend email</string>
    <string name="try_again_countdown">Try again in %d sec</string>
    <string name="boards">Boards</string>
    <string name="board">Board</string>
    <string name="workspace">Workspace</string>
    <string name="task_list">Task list</string>
    <string name="tasks">Tasks</string>
    <string name="inbox">Inbox</string>
    <string name="user_workspaces_headline">My workspaces</string>
    <string name="shared_workspaces_headline">Shared workspaces</string>
    <string name="shared_boards_headline">Shared boards</string>
    <string name="workspace_settings">Workspace settings</string>
    <string name="workspace_name_hint">Workspace name</string>
    <string name="delete_workspace">Delete workspace</string>
    <string name="delete">Delete</string>
    <string name="no_workspace_selected_tip_title">Workspace is not selected</string>
    <string name="workspace_selection_tip"><b>Tap the menu icon to select or create a workspace</b></string>
    <string name="empty_workspace_tip_title">Nothing here</string>
    <string name="empty_workspace_tip">Boards will appear here once created</string>
    <string name="empty_shared_boards_tip">Shared boards will appear here</string>
    <string name="fab_new_board">New board</string>
    <string name="create_task">Create task</string>
    <string name="create_workspace">Create workspace</string>
    <string name="create_board">Create board</string>
    <string name="create_board_hint">Enter a new board name</string>
    <string name="create_task_list">Create task list</string>
    <string name="edit_task_list_name">Edit task list name</string>
    <string name="create_task_list_hint">Enter a new list name</string>
    <string name="created_by">Created by: %s</string>
    <string name="created_by_label">Created by:</string>
    <string name="tags_label">Tags</string>
    <string name="task_members">Members</string>
    <string name="date_starts_label">Starts</string>
    <string name="date_ends_label">Ends</string>
    <string name="date_starts">Starts %s</string>
    <string name="date_ends">Ends %s</string>
    <string name="task_date">%s - %s</string>
    <string name="date_time_placeholder">dd/mm/yy, hh:mm</string>
    <string name="date_placeholder">dd/mm/yy</string>
    <string name="time_placeholder">hh:mm</string>
    <string name="no_tags">No tags set yet</string>
    <string name="no_task_members">No one assigned yet</string>
    <string name="date_time">%s, %s</string>
    <string name="no_description">No description</string>
    <string name="no_datetime">Due date is not set</string>
    <string name="hint_description">Description</string>
    <string name="hint_name_required">Name*</string>
    <string name="hint_item">%s name</string>
    <string name="add_members">Add members</string>
    <string name="search_members_hint">Member name</string>
    <string name="add_tags">Add tags</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="edit_task">Edit task</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_new_tag">Enter tag name</string>
    <string name="select_tag_color">Select tag color</string>
    <string name="due_date">Due date</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="time">Time</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_name">Edit name</string>
    <string name="members_label">Members</string>
    <string name="action_edit_tags">Edit tags</string>
    <string name="action_view_all">View all</string>
    <string name="board_settings">Board settings"</string>
    <string name="create_tag">Create tag</string>
    <string name="edit_tag">Edit tag</string>
    <string name="user_tag">\@%s</string>
    <string name="members">Members</string>
    <string name="workspace_role_admin_description">Can edit workspace settings, manage its members, create and edit boards</string>
    <string name="workspace_role_member_description">Can view workspace boards and manage them only if their member</string>
    <string name="board_role_admin_description">Can create, edit, delete lists and tasks, edit board settings, manage its members.</string>
    <string name="board_role_member_description">Can create, edit, delete lists and tasks</string>
    <string name="item_role">%s\n%s</string>
    <string name="change_picture">Change picture</string>
    <string name="hint_tag">Tag</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="delete_workspace_dialog_title">Delete workspace?</string>
    <string name="delete_board_dialog_title">Delete board?</string>
    <string name="delete_task_list_dialog_title">Delete task list?</string>
    <string name="delete_task_dialog_title">Delete task?</string>
    <string name="delete_dialog_description">This action cannot be undone</string>
    <string name="leave_board">Leave board</string>
    <string name="leave_workspace">Leave workspace</string>
    <string name="positive_button_create">Create</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="name_label">Name</string>
    <string name="tag_label">Tag</string>
    <string name="email_label">Email</string>
</resources>