<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_light"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_close_outlined_24"
            app:title="@string/board_settings">

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:text="Save"
                android:textColor="@color/md_theme_light_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfName"
            style="@style/TextInputLayout.Outlined.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_required" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfDescription"
            style="@style/TextInputLayout.Outlined.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tfName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvMembers"
            style="?textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:labelFor="@id/etSearchMembers"
            android:text="@string/members_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfSearchUser"
            style="@style/TextInputLayout.Outlined.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/tvMembers">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearchUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_members_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tfSearchUser"
            tools:listitem="@layout/item_member_chip" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnViewAllMembers"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="0dp"
            android:text="@string/action_view_all"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tvMembers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvMembers" />

        <TextView
            android:id="@+id/tvTags"
            style="?textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:labelFor="@id/etSearchMembers"
            android:text="@string/tags_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvMembers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/btnEditTags"
            tools:listitem="@layout/tag_task_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditTags"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_edit_tags"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tvTags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTags" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteBoard"
            style="@style/Material.Button.Text.NoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/action_delete"
            android:textColor="@color/dark_red"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvTags" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLeaveBoard"
            style="@style/Material.Button.Text.NoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/leave_board"
            android:textColor="@color/dark_red"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/btnDeleteBoard"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFoundUsers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfSearchUser"
            tools:listitem="@layout/item_user_search_result" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>